blocks/profile.css
.profile {
  display: flex;
  align-items: center;
  padding-top: 40px;
}

.profile__image {
  height: 120px;
  width: 120px;
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
  margin-right: 30px;
}

.profile__info {
  display: grid;
  grid-template-areas: "title button" "description description";
  grid-template-columns: minmax(auto, 373px) auto;
}

.profile__title {
  font-size: 42px;
  line-height: 48px;
  font-weight: 500;
  grid-area: title;
  margin: 0 0 7px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.profile__edit-button {
  background: transparent url(../images/edit-icon.svg) center no-repeat;
  height: 24px;
  width: 24px;
  grid-area: button;
  align-self: center;
  border: 1px solid white;
}

.profile__edit-button:hover {
  opacity: 60%;
}

.profile__description {
  font-size: 18px;
  line-height: 22px;
  font-weight: 400;
  grid-area: description;
  margin: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.profile__add-button {
  background: transparent url(../images/add-icon-inactive.svg) center no-repeat;
  width: 150px;
  height: 50px;
  margin-left: auto;
  border: 2px solid white;
  border-radius: 2px;
}

.profile__add-button:hover {
  opacity: 60%;
}

@media screen and (max-width: 768px) {
  .profile {
    flex-direction: column;
    align-items: center;
    padding-top: 0;
  }

  .profile__info {
    text-align: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: 373px;
  }

  .profile__title {
    margin-top: 14px;
    font-size: 22px;
    line-height: 26.63px;
    text-align: center;
    display: inline-block;
    max-width: 100%;
  }

  .profile__edit-button {
    margin-left: 0;
    width: 18px;
    height: 18px;
  }

  .profile__image {
    margin: 42px auto 30px;
  }

  .profile__add-button {
    width: 100%;
    margin-top: 36px;
    padding-left: 19px;
    padding-right: 19px;
  }

  .profile__description {
    font-size: 14px;
    line-height: 16.94px;
  }
}

